--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "prepare": "husky install",
-    "test": ""
+    "prepare": "husky install"
   },
   "dependencies": {
     "pinia": "^2.0.28",
