--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
     "pinia": "^2.0.28",
+    "vant": "^3.6.4",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
@@ -29,9 +31,14 @@
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "husky": "^8.0.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.21",
+    "postcss-pxtorem": "^6.0.0",
     "prettier": "^2.7.1",
     "typescript": "~4.7.4",
+    "unplugin-vue-components": "^0.24.0",
     "vite": "^4.0.0",
     "vue-tsc": "^1.0.12"
   },
