--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
+    "axios": "^1.3.4",
     "pinia": "^2.0.28",
     "vant": "^3.6.4",
     "vue": "^3.2.45",
