--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "amfe-flexible": "^2.2.1",
     "axios": "^1.3.4",
+    "normalize.css": "^8.0.1",
     "pinia": "^2.0.28",
     "vant": "^3.6.4",
     "vue": "^3.2.45",
